--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,44 +20,43 @@ html, body {
     margin: 0;
 }
 
-.full-height {
-    height: 100vh;
+a {
+  color: #65D36E;
 }
 
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+a:hover {
+  color: #3f8445;
+}
+[v-cloak] * { display:none }
+[v-cloak]::before { content: "loading…" }
+
+.box {
+  transition: all 1s;
+  display: block;
+  width: 100%;
+}
+.box {
+  padding: 10px;
+  box-shadow: 0 1px 0 rgba(10, 10, 10, .1);
+  border-radius: 0;
+}
+.box:not(:last-child) {
+  margin-bottom: .5rem;
+}
+.flip-list-enter, .flip-list-leave-to {
+  opacity: 0;
+  transform: translateY(30px);
+}
+.flip-list-leave-active {
+  opacity: 0;
+  transition: opacity .2s, transform 1s;
+  position: absolute;
 }
 
-.position-ref {
-    position: relative;
-}
 
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
 }
-
-.content {
-    text-align: center;
-}
-
-.title {
-    font-size: 84px;
-}
-
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 12px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.m-b-md {
-    margin-bottom: 30px;
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
 }
