--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 // @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
@@ -14,10 +13,10 @@
 }
 
 html, body {
-    color: #636b6f;
-    font-family: 'Raleway', sans-serif;
-    min-height: 100vh;
-    margin: 0;
+  color: #636b6f;
+  font-family: $font-family-sans-serif;
+  min-height: 100vh;
+  margin: 0;
 }
 
 a {
