--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,3 +59,10 @@ a:hover {
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
 }
+
+.what {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  border-radius: 100%;
+}
