--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,13 +7,13 @@
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+// .navbar-laravel {
+//   background-color: #fff;
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+// }
 
 html, body {
-  color: #636b6f;
+  color: #323334;
   font-family: $font-family-sans-serif;
   min-height: 100vh;
   margin: 0;
@@ -26,6 +26,7 @@ a {
 a:hover {
   color: #3f8445;
 }
+
 [v-cloak] * { display:none }
 [v-cloak]::before { content: "loading…" }
 
@@ -42,6 +43,7 @@ a:hover {
 .box:not(:last-child) {
   margin-bottom: .5rem;
 }
+
 .flip-list-enter, .flip-list-leave-to {
   opacity: 0;
   transform: translateY(30px);
@@ -65,4 +67,24 @@ a:hover {
   top: 15px;
   right: 15px;
   border-radius: 100%;
+}
+
+.level-left,
+.level-right {
+  flex-shrink: 1;
+}
+
+.level-right {
+  margin-left: 15px;
+}
+@media screen and (max-width: 768px) {
+  .level-left+.level-right {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    margin-top: 2rem;
+  }
 }
