--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,3 +92,10 @@ a:hover {
     margin-top: 2rem;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .columns.is-variable .column {
+    padding-left: .5rem;
+    padding-right: .5rem;
+  }
+}
