--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -88,3 +88,11 @@ a:hover {
     margin-top: 2rem;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .columns.is-variable .column {
+    padding-left: .5rem;
+    padding-right: .5rem;
+  }
+}
+
